# cedille2

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  notes.md
bench/: conv_eval.ced
crates/cli/: main.rs  repl.rs
crates/core/: Cargo.toml
crates/core/src/: co.rs  database.rs  eval.rs  hc.rs  infer.rs  lib.rs  metavar.rs  parser.rs  term.rs  unify.rs  utility.rs  value.rs  value_old.rs
crates/lang/: Cargo.toml
crates/lang/src/: database.rs  elaborator.rs  error.rs  grammar.pest  lexer.rs  lib.rs  parser.rs  parser2.rs  rewriter.rs  syntax.rs
lib/: bool.ced  cast.ced  data.ced  eq.ced  erasure.ced  even.ced  id.ced  irrel.ced  iseven.ced  nat.ced  nat2.ced  not.ced  omega.ced  pair.ced  parser.ced  rec.ced  sigma.ced  sum.ced  test.ced  view.ced
lib/elim/: label.ced  nat.ced  vec.ced
lib/generic/: idata.ced  nat.ced
src/: cedille.pest  conversion.rs  database.rs  elaborator.rs  error.rs  kernel.rs  lib.rs  main.rs  parser.rs  reduction.rs  repl.rs  syntax.rs
src/common/: debruijn.rs  mod.rs  symbol.rs
src/kernel/: conversion.rs  core.rs  factory.rs  metavar.rs  mod.rs  reduction.rs  term.rs  value.rs
src/lang/: datatypes.rs  elaborator.rs  grammar.pest  mod.rs  parser.rs  resolver.rs  rewriter.rs  syntax.rs
tests/: church.ced  comparison.ced  cycle_b.ced  cycle_c.ced
tests/church/: nat.ced  unit.ced  vec.ced
tests/failure/church/: bool.ced  unitwrapper.ced
tests/failure/core/: danglingdef.ced  delta.ced  erasure1.ced  erasure2.ced  intersect.ced  nothingtoproject.ced
tests/failure/inference/: vec.ced
tests/failure/module/: cycle.ced  cycle_c.ced  doubleimport.ced  mixed.ced  param.ced  paramimport1.ced  redefined.ced  redefined2.ced
tests/failure/opaque/: opaque1.ced  opaque2.ced  opaque3.ced
tests/module/: cycle_a.ced
tests/success/: opaque.ced
tests/success/church/: bool.ced  list.ced  nat.ced  unit.ced  vec.ced
tests/success/church/inductive/: bool.ced  list.ced  nat.ced  unit.ced  vec.ced
tests/success/core/: equality.ced  etalong.ced  false.ced  not.ced  rewrites.ced  top.ced  true.ced
tests/success/inference/: basic.ced
tests/success/module/: mixed.ced  param1.ced  param1import1.ced  param1import2.ced  param1import3.ced  qualified.ced  transitive.ced  transitive2.ced  transitive3.ced  transitive4.ced  unit.ced  unitwrapper.ced  unitwrapper2.ced  unitwrapper2wrapper.ced  unqualified.ced
