[package]
name = "cedille2"
version = "2.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Error handling libraries
anyhow = "1.0"
thiserror = "1.0"

# CLI and REPL libraries
rustyline = "9.0.0"
rustyline-derive = "0.5.0"
clap = "2"
colored = "2"
directories = "4"

# Parsing libraries
pest = "2.1.3"
pest_derive = "2.1.0"

# Datastructure libraries
radix_trie = "0.2"
petgraph = "0.6.0"
