[package]
name = "cedille2"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Error handling libraries
anyhow = "=1.0"
thiserror = "=1.0"

# CLI and REPL libraries
rustyline = "=9.0.0"
rustyline-derive = "=0.5.0"
clap = "=2"
colored = "=2"
directories = "=4"

# Parsing libraries
pest = "=2.1.3"
pest_derive = "=2.1.0"
## Consider: https://lib.rs/crates/chumsky (not mature, grammar is combinator based)

# Memory management libraries
internment = "=0.5.4"
threadstack = "=0.4.1"

# Data structures
im-rc = "=15.0.0"
slotmap = "=1.0.6"

# Helper / auxillary libraries
derive_more = "=0.99.17"
once_cell = "=1.9.0"
log ="0.4.14"
env_logger = "=0.9.0"
normpath = "=0.3.2"
if_chain = "=1.0.2"
paste = "=1.0.6"
